--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,10 @@
   "dependencies": {
     "babel-preset-stage-3": "^6.24.1",
     "backpack-core": "^0.7.0",
-    "express": "^4.16.3"
+    "dotenv": "^6.0.0",
+    "express": "^4.16.3",
+    "joi": "^13.5.2",
+    "mongoose": "^5.2.6",
+    "volleyball": "^1.5.1"
   }
 }
