--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "babel-preset-stage-3": "^6.24.1",
     "backpack-core": "^0.7.0",
+    "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "joi": "^13.5.2",
