--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 PORT = 5000
-DB_url = 'mongodb://localhost:27017/restaurant'
+DB_url = 'mongodb://restaurant:restaurant123@ds217002.mlab.com:17002/restaurant'
